<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/poiPicture"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imagen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="ImageContrastCheck"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/poiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/poiDescription"
        app:layout_constraintLeft_toRightOf="@+id/poiPicture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/nombrepoi" />

    <TextView
        android:id="@+id/poiDescription"
        android:layout_width="301dp"
        android:layout_height="31dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintLeft_toRightOf="@+id/poiPicture"
        app:layout_constraintTop_toBottomOf="@+id/poiName"
        tools:text="Descripción de la ciudad" />

    <ImageView
        android:id="@+id/poiLogoLocation"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="376dp"
        android:layout_marginBottom="68dp"
        android:contentDescription="@string/ubicacion"
        android:src="@drawable/ic_google_maps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/poiRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/poiPicture"
        app:layout_constraintTop_toBottomOf="@+id/poiDescription"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/calificacion" />

</androidx.constraintlayout.widget.ConstraintLayout>